res/examples/valid/assert_type_from_inferred_type_b.eg
let a: number = 100;

let b: function<tuple, number> = (): number => { a };
assert_type b, function<tuple, number>;

let c = (): number => { a };
assert_type c, function<tuple, number>;

let d = b;
assert_type d, function<tuple, number>;
