res/examples/invalid/call_fn_expr_with_type_mismatched_args.eg
let sum = (a: number, b: number): number => { a + b };

sum(false, "10");

// out: TypeError: mismatched types: expected type `number` but received `bool`
// out: TypeError: mismatched types: expected type `number` but received `string`